# mushin

./: .firebaserc  .gitignore  CMakeLists.txt  LICENSE  README.md  SkinStorage.h  aider-go-gemini.ps1  aider-go-gpt-oss.ps1  aider.yml  deploy.ps1  firebase.json  history.md  package-lock.json  rebuild_installer.ps1  }  });  };
.agent/: GEMINI.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SkinStorage.h  aider.yml
Source/Web/: index.html
Source/dsp/: DelayProcessor.h  DualFilterLFOMatrix.h  Filter.h  LFO.h  LimiterProcessor.h  NoiseOscillator.h  QuantizationErrorProcessor.h  TranceGateProcessor.h
Source/dsp_sidechain/: EnvelopeFollower.h  SidechainProcessor.h
Source/dsp_waveshaper/: Waveshaper.h
doc/: augmented_devs_why_it_is_the_key.md  build-and-publish-howto.md  build.md  cross_platform_build_strategy.md  feature_dual_filter_lfo_matrix.md  feature_installer_support.md  feature_presets_support.md  feature_shader_support.md  feature_sidechain_support.md  how-to-build-and-get-intellisense.md  install-aider.md  killer_user_focus_group.md  local-models.md  plugin_safe_initialization.md  presets_bank_0.md  presets_deployment_logic.md
doc/dsp/: dsp_Waveshaper.md  dsp_guidelines.md
doc/features/: feature_LFO_phase.md  feature_airgap_suspension.md  feature_corruptor.md  feature_delay.md  feature_download_for_windows_and_site_update.md  feature_feedback_signal.md  feature_hidpi_support.md  feature_installer_support.md  feature_knob_slider.md  feature_limiter.md  feature_musical_lfo_sliders.md  feature_noise_oscillator.md  feature_oscilloscope.md  feature_preset_switcher.md  feature_quantizatiion_error.md  feature_signal_into_sidechain.md  (+9 more)
features/: features-concept.md
manual/: mushin_manual.tex
presets/: Acid Flashback.xml  Airy Lift.xml  Bass Growler.xml  Crushed Velvet.xml  Deep Sea Pressure.xml  Digital Grit.xml  Dual Resonator.xml  High End Sizzle.xml  Industrial Hell.xml  Lunar Sweep.xml  MotherDucker.xml  Mushin Pumper.xml  Neon Pulsar.xml  Ocean Swell.xml  Parallel Phaser.xml  Radio From Mars.xml  Rhythmic Gater.xml  Sub Destroyer.xml  The Grater.xml  Vocaloid A-O.xml  Warm Tape Saturation.xml  WhopWhop.xml  dual moves.xml
presets_bank_trading/: Bust it.xml  Churn.xml  Destroyer of Worlds.xml  Exhausted.xml  Growl.xml  Init.xml  Market in Balance.xml  Stop Loss Nearing.xml  Stopped Out.xml  Toppy.xml  Traffic Trade.xml  Trending.xml  Unapologetic.xml  Upmarket.xml
scripts/: compile_manual.js  convert_presets.ps1
site/: index.html  style.css
skills/: compileit.skill
specs/: project_overview.md
(+35 files in other folders)
